    * Report whether the current job is from the SD or not
    * Support long file names in the upcoming 3.10 release (file explorer only)
    * Added new endpoint /api/files with JSON response
    * Added new endpoint /api/job with JSON response
    * Added support for the new C parameter in M155
    * Modification of /api/connection, files, printer and job endpoints
    * All files in data_dir (user's home by default)
    * Parse print info from the file name (for SD files)
    * Introduce ErrorState(s) from SDK
    * Modify `LCDPrinter` to show IP and status based on SDK error states
    * Support the nem M27 P
    * Fix not being able to print from root of SD when in a folder in LCD menu
    * Send 0% when a new print start is observed
    * Fix no progress being sent when SD print has no stats in its gcode
    * Support fan errors. Send reason for ATTENTION state in state change data
    * Support showing the IP address in the support menu using "M552 P<IP>"
    * /link-info debug page
    * SN is obtained always through the FW and isn't stored in a file anymore
    * Ensure M20 won't be sent during print. Ever
    * Start faster when already printing from SD
    * Don't store password in plaintext but use digest
    * Stop Wizard on printer errors.
    * Support the new STOPPED state

0.2.0 (2020-12-14)

    * JOB_INFO fix
    * Service must be start using daemon script prusa-link
    * Implicit config path is /etc/Prusa-Link/prusa-link.ini
    * Implicit settings path is {HOME}/prusa_printer_settings.ini
    * Wizard - part II
    * Api-Key in INFO event
    * Wizard redesign


0.1.3 (2020-12-01)

    * Report at least a file name for SD prints
    * Wizard - part I
    * Fix command handling and re-undo fw double-ok workarounds
      (FW commit gd167b3bd or newer is required)

0.1.2 (2020-11-23)

    * New FW (3.9.2.3566) required
    * local web service on http://IP-address:8080
    * file upload from Prusa Slicer (use `PrusaSlicer` Api-Key)